<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="5dp" >
    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/contact_call"
        android:src="@drawable/call"
        android:text="@string/contact_call" />
    <ImageView
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/form_msg"
        android:src="@drawable/mail"
        android:text="@string/contact_msg" />
    <ImageView
        android:id="@+id/send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/contact_sms"
        android:src="@drawable/sms"
        android:text="@string/contact_sms" />

</LinearLayout>