<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_bg"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.01"
        android:src="@drawable/form_heading" />

    <TextView
        android:id="@+id/not_availible_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_name"
        android:textColor="#246878"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/msg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#246878"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/not_availible_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_tel"
        android:textColor="#246878"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/msg_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#246878"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_mail"
        android:textColor="#246878"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/msg_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#246878"
        android:inputType="textEmailAddress"
        android:singleLine="true"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_msg"
        android:textColor="#246878"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/msg_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textColor="#246878" />

    <ImageButton
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/form_button" />

</LinearLayout>