<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/widget_view"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="3dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_edges"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
     >

<LinearLayout 
    android:id="@+id/widget_trueffel_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp"
    android:baselineAligned="true"
    >
 <!--    android:background="@drawable/form_bg2"   -->
    
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingRight="5dp"
        > 
   <!--     <ImageView 
            android:id="@+id/widget_trufa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            />   -->
  
        <ImageView
            android:id="@+id/widget_img1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/name_trufa_2"
            android:scaleType="fitXY"
            android:src="@drawable/trufaneagra" />

     <!--    
        <TextView
            android:id="@+id/widget_cat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/widget_img1"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/widget_img1"
            android:text="ab 15g"
            android:textSize="10dp"
            android:textColor="@color/cat_color"
             />
              -->

        <TextView
            android:id="@+id/widget_pr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/widget_img1"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cat_color"
            android:textSize="12dp"
            android:textStyle="bold" />

	<!-- 
        <TextView
            android:id="@+id/widget_cat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_cat1"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/widget_img1"
            android:text="bis 15g"
            android:textSize="10dp" />
 -->

        <TextView
            android:id="@+id/widget_pr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_pr1"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/widget_img1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/cat_color"
            android:textSize="12dp"
            android:textStyle="bold" />
        
   </RelativeLayout>  
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
<!-- 
        <TextView
            android:id="@+id/widget_trufa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/trufa2_widget" />   
        
        <ImageView 
            android:id="@+id/widget_trufa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
            /> -->

        <ImageView
            android:id="@+id/widget_img2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/name_trufa_1"
            android:scaleType="fitXY"
            android:src="@drawable/trufaalba" />

<!--   <TextView
            android:id="@+id/widget_cat12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/widget_img2"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/widget_img2"
            android:text="über 50g"
            android:textSize="10dp" />   

        <TextView
            android:id="@+id/widget_cat22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/widget_cat12"
            android:layout_below="@+id/widget_cat12"
            android:text="10-50g"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/widget_cat32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_cat22"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/widget_img2"
            android:text="0-10g"
            android:textSize="10dp"/>  -->

        <TextView
            android:id="@+id/widget_pr12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/widget_img2"
            android:text="-"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_pr22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_pr12"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/widget_img2"
            android:text=""
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_pr32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/widget_pr22"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/widget_img2"
            android:text=""
            android:textSize="12dp"
            android:textStyle="bold" />

    </RelativeLayout>  
    
</LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ProgressBar
        android:id="@+id/widget_progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"
         />

    <ImageView
        android:id="@+id/widget_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/logo1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/widget_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/info_preise"
        android:textColor="@color/cat_color"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/widget_last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:text=""
        android:textSize="10dp" />

    <ImageView
        android:id="@+id/widget_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/refresh_widg"
        android:src="@drawable/ic_tab_refresh_unselected"
        android:visibility="visible" />

</RelativeLayout>

</LinearLayout>

<ImageView
    android:id="@+id/widget_trufa_title"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:scaleType="fitXY"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:src="@drawable/trufa" />

<ImageView
    android:id="@+id/widget_logo1"
    android:layout_width="85dp"
    android:layout_height="30dp"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/widget_trufa_title"
    android:src="@drawable/logo1" />

<ImageView
    android:id="@+id/imageView3"
    android:layout_width="80dp"
    android:layout_height="25dp"
    android:layout_alignParentTop="true"
    android:layout_marginTop="2dp"
    android:layout_toRightOf="@+id/widget_logo1"
    android:src="@drawable/logo2" />
 
</RelativeLayout>